# smaish

./: .ignore  Cargo.toml  README.md  README.org
src/: camera.rs  editor.rs  main.rs  player.rs  stage.rs  ui.rs
src/character/: mod.rs  player.rs
